# SequenceMatching_LCP

./: CMakeLists.txt  FileManipulation.cpp  FileManipulation.h  LCPArrayKasai.hpp  Makefile  MatchLocations.cpp  MatchLocations.h  MatchValidity.cpp  MatchValidity.h  PossibleMatches.cpp  PossibleMatches.h  Q8WZ42.txt  Q9I7U4.txt  Results_LCP.txt  Results_LCP1.txt  Sais.c  SequenceMatching.cpp  SequenceMatching.h  SequenceMatching_LCP  SequenceRange.cpp  SequenceRange.h  SuffixArray.hpp  main.cpp
Test_Cases/: Results.txt  Results_SUB.txt  SEQ1.txt  SEQ2.txt
Testing/: P04247.txt  P69892.txt  Results.txt  Results_CustomAlgorithm.txt  Results_LCP.txt  Results_LCP1.txt  Results_SM.txt  Sequence_Matching
